--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <span class="badge">✓ Detailed stats</span>
           <span class="badge">✓ History saving</span>
           <span class="badge">✓ Full Hebrew support</span>
-          <span class="badge">✓ No annoying ads</span>
+          <!-- <span class="badge">✓ No annoying ads</span> -->
         </div>
       </div>
 
